deleted unrelated documents

--- a/webscrapper2.ipynb
+++ b/webscrapper2.ipynb
@@ -47041,10 +47041,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prev_df = prev_df[['link', 'words']]\n",
-    "prev_df = prev_df.rename(columns={'words':'prev_words'})\n",
+    "prev_df = prev_df[['link', 'words', 'hits', 'kudos', 'comments','bookmarks']]\n",
+    "prev_df = prev_df.rename(columns={'words':'prev_words', 'hits':'prev_hits', 'kudos':'prev_kudos', 'comments':'prev_comments','bookmarks':'prev_bookmarks'})\n",
     "working_df = working_df.merge(prev_df, how='left', on='link')\n",
-    "working_df['prev_words'] = working_df['prev_words'].fillna(0)"
+    "working_df['prev_words'] = working_df['prev_words'].fillna(0)\n",
+    "working_df['prev_hits'] = working_df['prev_hits'].fillna(0)\n",
+    "working_df['prev_kudos'] = working_df['prev_kudos'].fillna(0)\n",
+    "working_df['prev_comments'] = working_df['prev_comments'].fillna(0)\n",
+    "working_df['prev_bookmarks'] = working_df['prev_bookmarks'].fillna(0)"
    ]
   },
   {
